salesforce/force-app/main/default/objects/Event__c/Event__c.object-meta.xml
<CustomObject>
  <label>Event</label>
  <pluralLabel>Events</pluralLabel>
  <nameField>
    <label>Event Name</label>
    <type>Text</type>
  </nameField>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>