salesforce/force-app/main/default/objects/Event__c/fields/Actor__c.field-meta.xml
<CustomField>
  <fullName>Actor__c</fullName>
  <label>Actor</label>
  <type>Lookup</type>
  <referenceTo>AppUser__c</referenceTo>
  <relationshipLabel>Events</relationshipLabel>
  <relationshipName>Events</relationshipName>
  <deleteConstraint>SetNull</deleteConstraint>
</CustomField>