salesforce/force-app/main/default/objects/Event__c/fields/ExternalEventId__c.field-meta.xml
<CustomField>
  <fullName>ExternalEventId__c</fullName>
  <label>External Event Id</label>
  <type>Text</type>
  <length>64</length>
  <unique>true</unique>
  <externalId>true</externalId>
  <description>Idempotency key from backend.</description>
</CustomField>