salesforce/force-app/main/default/objects/Event__c/fields/Payload__c.field-meta.xml
<CustomField>
  <fullName>Payload__c</fullName>
  <label>Payload (JSON)</label>
  <type>LongTextArea</type>
  <length>32768</length>
  <description>Event details for demo/audit trail (store small JSON).</description>
</CustomField>