salesforce/force-app/main/default/objects/Event__c/fields/Ride__c.field-meta.xml
<CustomField>
  <fullName>Ride__c</fullName>
  <label>Ride</label>
  <type>Lookup</type>
  <referenceTo>Ride__c</referenceTo>
  <relationshipLabel>Events</relationshipLabel>
  <relationshipName>Events</relationshipName>
  <deleteConstraint>SetNull</deleteConstraint>
</CustomField>