salesforce/force-app/main/default/objects/Event__c/fields/Type__c.field-meta.xml
<CustomField>
  <fullName>Type__c</fullName>
  <label>Type</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
      <value><fullName>Auth</fullName><default>true</default><label>Auth</label></value>
      <value><fullName>Ride</fullName><default>false</default><label>Ride</label></value>
      <value><fullName>Request</fullName><default>false</default><label>Request</label></value>
      <value><fullName>Safety</fullName><default>false</default><label>Safety</label></value>
      <value><fullName>System</fullName><default>false</default><label>System</label></value>
    </valueSetDefinition>
  </valueSet>
</CustomField>